[package]
authors = ["BlackDex <black.dex@gmail.com>"]
name = "dieselmulticrate"
version = "0.4.0"
edition = "2021"
resolver = "2"

[features]
default = []
vendored_openssl = ["openssl/vendored"]

[dependencies]
# Make sure OpenSSL gets build
openssl = "*"

# Tell diels to use all these features.
diesel = { version = "2.0.*", features = ["sqlite", "mysql", "postgres", "chrono", "r2d2"] }
diesel_migrations = { version = "2.0.*", features = ["sqlite", "mysql", "postgres"] }

# Strip symbols from the release builds
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#strip
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#strip
# Also enable thin LTO for some optimizations
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#lto
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#lto
[profile.release]
strip = "symbols"
lto = "thin"
