[package]
authors = ["BlackDex <black.dex@gmail.com>"]
name = "dieselmysqlcrate"
version = "0.5.1"
edition = "2021"
resolver = "2"

[dependencies]
# Tell Diesel to use MySQL features
diesel = { version = "2.2.*", features = ["mysql", "chrono", "r2d2"] }
diesel_migrations = { version = "2.2.*", features = ["mysql"] }

# Strip symbols from the release builds
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#strip
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#strip
# Also enable thin LTO for some optimizations
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#lto
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#lto
[profile.release]
strip = "symbols"
lto = "thin"
