[package]
authors = ["BlackDex <black.dex@gmail.com>"]
name = "dieselpgcrate"
version = "0.5.0"
edition = "2021"
resolver = "2"

[features]
default = []
vendored_openssl = ["openssl/vendored"]
vendored_pq = ["pq-sys/bundled"]
vendored_pq_no_ssl = ["pq-sys/bundled_without_openssl"]

[dependencies]
openssl = "*"
pq-sys = { version = "*", optional = true }

diesel = { version = "2.2.*", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = { version = "2.2.*", features = ["postgres"] }

# Strip symbols from the release builds
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#strip
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#strip
# Also enable thin LTO for some optimizations
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#lto
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#lto
[profile.release]
strip = "symbols"
lto = "thin"

[profile.dev]
strip = "symbols"
