[package]
authors = ["BlackDex <black.dex@gmail.com>"]
name = "dieselsqlitecrate"
version = "0.3.1"
edition = "2021"
resolver = "2"

[features]
bundled_sqlite = ["libsqlite3-sys"]

[dependencies]
libsqlite3-sys = { version = "0.22.2", features = ["bundled"], optional = true }

diesel = { version = "1.4.*", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = { version = "1.4.*", features = ["sqlite"] }

# Strip symbols from the release builds
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#strip
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#strip
# Also enable thin LTO for some optimizations
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#lto
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#lto
[profile.release]
strip = "symbols"
lto = "thin"
