[package]
authors = ["BlackDex <black.dex@gmail.com>"]
name = "dieselsqlitecrate"
version = "0.6.0"
edition = "2024"

[features]
default = []
vendored_sqlite = ["libsqlite3-sys/bundled"]
# For sqlcipher you need to link openssl first, same issue as with Postgres, they do not link libssl from within the crate
vendored_sqlcipher = ["libsqlite3-sys/bundled-sqlcipher", "_enable_openssl"]
vendored_sqlcipher_and_ssl = ["libsqlite3-sys/bundled-sqlcipher-vendored-openssl"]
_enable_openssl = ["dep:openssl"]

[dependencies]
openssl = { version = "*", optional = true }
libsqlite3-sys = "*"

diesel = { version = "2.3.*", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = { version = "2.3.*", features = ["sqlite"] }

# Strip symbols from the release builds
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#strip
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#strip
# Also enable thin LTO for some optimizations
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#lto
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#lto
[profile.release]
strip = "symbols"
codegen-units = 1
debug = false
lto = "fat"

[profile.dev]
strip = "debuginfo"
