[package]
authors = ["BlackDex <black.dex@gmail.com>"]
name = "hypercrate"
version = "0.5.0"
edition = "2021"
resolver = "2"

[dependencies]
bytes = { version = "*" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "*", features = ["client-legacy", "tokio", "http1"] }
hyper-tls = { version = "*" }
http-body-util = { version = "*" }

# Strip symbols from the release builds
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#strip
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#strip
# Also enable thin LTO for some optimizations
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#lto
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#lto
[profile.release]
strip = "symbols"
lto = "thin"
