[package]
authors = ["BlackDex <black.dex@gmail.com>"]
name = "multicrate"
version = "0.5.1"
edition = "2021"
resolver = "2"

[features]
default = []
vendored_openssl = ["openssl/vendored"]

[dependencies]
# Make sure OpenSSL gets build, needed for Diesel, Curl and OpenSSL tests
openssl = "*"
openssl-sys = "*"

# To get the library version used during the test
pq-sys = "*"
mysqlclient-sys = "*"
libsqlite3-sys = "*"

# Deps for Diesel / SQLite / MySQL/MariaDB / PostgreSQL testing
# Tell Diesel to use all these features.
diesel = { version = "2.1.*", features = ["sqlite", "mysql", "postgres", "chrono", "r2d2"] }
diesel_migrations = { version = "2.1.*", features = ["sqlite", "mysql", "postgres"] }

# Deps for curl testing
curl = { version = "*", default-features = false }

# Deps for serde testing
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"

# Deps for MiMalloc intergration
mimalloc = { version = "*", features = ["secure", "extended"] }

# Deps for zlib testing
flate2 = { version = "*", features = ["zlib-default"], default-features = false }
libz-sys = { version = "*" }

# Deps for libxml2 testing
libxml = "*"

# Patch mimalloc for now until a new version is released
[patch.crates-io]
mimalloc = { git = "https://github.com/purpleprotocol/mimalloc_rust.git", rev="992c9da4c5afba7fbf4c5815c43c8f0fbd2a8da6" }

# Strip symbols from the release builds
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#strip
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#strip
# Also enable fat LTO for some optimizations
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#lto
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#lto
[profile.release]
strip = "symbols"
lto = "fat"
