[package]
authors = ["BlackDex <black.dex@gmail.com>"]
name = "multicrate"
version = "0.6.2"
edition = "2021"
resolver = "2"

[features]
default = []
vendored_openssl = ["openssl/vendored"]

[dependencies]
# Make sure OpenSSL gets build, needed for Diesel, Curl and OpenSSL tests
openssl = "*"
openssl-sys = "*"

# To get the library version used during the test
pq-sys = "*"
mysqlclient-sys = "*"
libsqlite3-sys = "*"

# Deps for Diesel / SQLite / MySQL/MariaDB / PostgreSQL testing
# Tell Diesel to use all these features.
diesel = { version = "2.2.*", features = ["sqlite", "mysql", "postgres", "chrono", "r2d2"] }
diesel_migrations = { version = "2.2.*", features = ["sqlite", "mysql", "postgres"] }

# Deps for curl testing
curl = { version = "*", default-features = false }

# Deps for serde testing
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"

# Deps for MiMalloc intergration
mimalloc = { version = "*", features = ["secure", "extended"] }

# Deps for zlib testing
flate2 = { version = "*", features = ["zlib-default"], default-features = false }
libz-sys = { version = "*" }

# Deps for libxml2 testing
libxml = "*"

# Set `buildtime_bindgen` until the following PR is approved and merged
# https://github.com/sgrif/mysqlclient-sys/pull/63
[target.'cfg(all(target_pointer_width = "32", target_arch = "arm"))'.dependencies]
mysqlclient-sys = { version = "*", features = ["buildtime_bindgen"] }

# Strip symbols from the release builds
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#strip
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#strip
# Also enable fat LTO for some optimizations
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#lto
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#lto
[profile.release]
strip = "symbols"
lto = "fat"
