[package]
authors = ["BlackDex <black.dex@gmail.com>"]
name = "rocketcrate"
version = "0.4.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5", default-features = false }

# Strip symbols from the release builds
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#strip
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#strip
# Also enable thin LTO for some optimizations
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#lto
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#lto
[profile.release]
strip = "symbols"
codegen-units = 1
debug = false
lto = "fat"

[profile.dev]
strip = "debuginfo"
