[package]
authors = ["BlackDex <black.dex@gmail.com>"]
name = "rustlscrate"
version = "0.2.0"
edition = "2021"
resolver = "2"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "*", features = ["webpki-tokio", "ring", "http1", "tls12"], default-features = false }
hyper-util = { version = "*", features = ["client-legacy", "tokio", "http1"], default-features = false }
rustls = { version = "*",  features = ["std", "tls12", "ring"], default-features = false}
http-body-util = { version = "*" }

# Strip symbols from the release builds
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#strip
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#strip
# Also enable thin LTO for some optimizations
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#lto
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#lto
[profile.release]
strip = "symbols"
lto = "thin"

[profile.dev]
strip = "symbols"
