[package]
authors = ["BlackDex <black.dex@gmail.com>"]
name = "rustlscrate"
version = "0.3.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "*", features = ["webpki-tokio", "ring", "http1", "tls12"], default-features = false }
hyper-util = { version = "*", features = ["client-legacy", "tokio", "http1"], default-features = false }
rustls = { version = "*",  features = ["std", "tls12", "ring"], default-features = false}
http-body-util = { version = "*" }

# Strip symbols from the release builds
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#strip
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#strip
# Also enable thin LTO for some optimizations
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#lto
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#lto
[profile.release]
strip = "symbols"
codegen-units = 1
debug = false
lto = "fat"

[profile.dev]
strip = "debuginfo"
