[package]
authors = ["BlackDex <black.dex@gmail.com>"]
name = "zlibcrate"
version = "0.4.0"
edition = "2021"
resolver = "2"

[dependencies]

# Deps for zlib testing
tar = { version = "*" }
flate2 = { version = "*", features = ["zlib-default"], default-features = false  }
libz-sys = { version = "*" }

# Strip symbols from the release builds
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#strip
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#strip
# Also enable thin LTO for some optimizations
# https://doc.rust-lang.org/stable/rustc/codegen-options/index.html#lto
# https://doc.rust-lang.org/stable/cargo/reference/profiles.html#lto
[profile.release]
strip = "symbols"
lto = "thin"

[profile.dev]
strip = "symbols"
